saturn-program-macros/tests/compile_fail/missing_instruction.stderr
error: missing `instruction = "Path"` in attribute
 --> tests/compile_fail/missing_instruction.rs:3:1
  |
3 | #[saturn_program(bitcoin_transaction = true, btc_tx_cfg(max_inputs_to_sign = 1, max_modified_accounts = 1))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `saturn_program` (in Nightly builds, run with -Z macro-backtrace for more info)
